# lyrics

./: .gitignore  .gitmodules  README.md  com.github.naaando.lyrics.json  coverage.sh  find_sources.sh  find_unit_test_sources.sh  gcovr.cfg  meson.build  meson_helper.sh  requirements.txt
.github/workflows/: tests.yml
data/: Application.css  Application.scss  com.github.naaando.lyrics.appdata.xml  com.github.naaando.lyrics.appdata.xml.in  com.github.naaando.lyrics.desktop  com.github.naaando.lyrics.desktop.in  com.github.naaando.lyrics.gresource.xml  com.github.naaando.lyrics.gschema.xml  meson.build
data/tests/: test.lrc  test_compressed.lrc  test_offset.lrc
debian/: changelog  control  rules
meson/: find_unit_test_sources.sh
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.naaando.lyrics.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+158 more)
src/: Application.vala  Functions.vala  MainWindow.vala  SimplePlayer.vala  StackController.vala  main.vala
src/Controller/: DisplayController.vala  StackController.vala
src/Core/: ILyricFile.vala  LocalFile.vala  Lyric.vala  LyricsService.vala  Metasong.vala  Player.vala  Players.vala  SongMetadata.vala
src/Core/Factory/: MetasongFactory.vala  SongMetadataFactory.vala
src/Core/Service/: PlayerStateService.vala
src/Downloader/Repository/: LyricsRepository.vala
src/Mpris/: MprisClient.vala  MprisPlayer.vala  MprisService.vala
src/Parser/: LRC-Parser.vala  LrcParser.vala  LyricFormatter.vala
src/Parser/ParserChain/: AChainOfResponsibility.vala  CompressedLyricContentParser.vala  LyricContentParser.vala  LyricEmptyStringParser.vala  LyricMetadataParser.vala
src/Repository/: ILyricFile.vala  IRepository.vala  LocalRepository.vala  LrclibRepository.vala  Repository.vala  SyncedLyricsRepository.vala
src/Repository/Interfaces/: ILyricFile.vala  IRepository.vala
src/Repository/Local/: LocalFile.vala  LocalRepository.vala
src/Repository/LyricSources/: LyricSourcesDownloader.vala  LyricSourcesFile.vala  LyricSourcesRemoteFile.vala  LyricSourcesRepository.vala
src/Repository/Remote/: ViewlyricsRemoteFile.vala  ViewlyricsRepository.vala
src/SyncedLyrics/: Shim.vala  SyncedLyricsShim.vala
src/View/: HeaderBar.vala  MainStack.vala  MainWindow.vala  PlayerChooser.vala  SearchLyricDialog.vala  SettingsPopover.vala  ThemeEditorDialog.vala  ThemeLoader.vala
src/View/Factory/: ViewFactory.vala
src/View/Helper/: ClickThroughHelper.vala  SaveWindowStateMixin.vala  WindowStateSaver.vala
src/View/Settings/: FontSelector.vala  SettingsPopover.vala
src/View/Widgets/: DownloadView.vala  FileChooserButton.vala  ModeSwitch.vala  SearchLyric.vala
src/View/Widgets/Displays/: IDisplay.vala  ScrolledDisplay.vala  SimpleDisplay.vala  StaticDisplay.vala  _Display.vala
src/Widgets/: Display.vala  Download.vala  FileChooserButton.vala
src/Widgets/Displays/: IDisplay.vala  ScrolledDisplay.vala  SimpleDisplay.vala
tests/: MockClass.vala  MockMethod.vala
tests/mocks/: FileMock.vala  PlayerMock.vala  RepositoryMock.vala
tests/unit/: TestCase.vala  Tests.vala  main.vala
tests/unit/Core/: Lyric.vala  LyricTest.vala  LyricsServiceTest.vala
tests/unit/Parser/: LrcParserTest.vala
tests/unit/Repository/: LrclibRepositoryTest.vala
tests/unit/View/Widgets/Displays/: ScrolledDisplayTest.vala
